# OOP_lab3_sound_processor

./: CMakeLists.txt  README.md  main.cpp  Основы ООП - Задача 3 (Sound Processor).txt
Config/: Config.cpp  Config.h  Config.txt
Converter/: Converter.cpp  Converter.h
Converter/Mixer/: Mixer.cpp  Mixer.h
Converter/Muter/: Muter.cpp  Muter.h
Converter/Slow/: Slow.cpp  Slow.h
Exceptions/: Exceptions.cpp  Exceptions.h
Factory/: Factory.h
Manual/: Manual.cpp  Manual.h
Mixer/: Mixer.cpp  Mixer.h
Muter/: Muter.cpp  Muter.h
Prog_args/: Prog_args.cpp  Prog_args.h
Sound_processor/: Sound_processor.cpp  Sound_processor.h
WAV/: WAV.cpp  WAV.h
